# mixinto

./: .gitignore  README.md  pyproject.toml
docs/: MIX_SAFETY_SCORE.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnalyzeTab.tsx  ExtendTab.tsx
scripts/: dev.sh  start_web.py
src/mixinto/cli/: __init__.py  cli.py
src/mixinto/core/: __init__.py  analyzer.py  evaluator.py  extender.py  presets.py
src/mixinto/dsp/beats/: __init__.py  grid.py
src/mixinto/dsp/extend/: __init__.py  loop.py
src/mixinto/dsp/render/: seam.py
src/mixinto/dsp/segments/: __init__.py  candidates.py  intro.py  scoring.py
src/mixinto/dsp/tempo/: __init__.py  detector.py
src/mixinto/features/: __init__.py  stability.py  timeline.py  vocals.py
src/mixinto/generation/: __init__.py  baseline.py  bassline.py
src/mixinto/io/audio/: __init__.py  loader.py  writer.py
src/mixinto/utils/: types.py
src/mixinto/web/: __init__.py  app.py
tests/: conftest.py
tests/unit/: test_analysis_config.py  test_audio_io.py  test_bassline.py  test_beats.py  test_enhanced_features.py  test_features.py  test_tempo.py
