[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixinto"
version = "0.1.0"
description = "DJ-first tool that extends track intros into longer, mix-safe lead-ins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "soundfile",
    "librosa",
    "scipy",
    "typer",
    "pydantic",
    "flask",
    "flask-cors",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
mixinto = "mixinto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
